adding more notes